# S2CITIES-AI

./: .gitignore  .gitmodules  LICENSE  README.md  analyse_dataset.py  analyse_timeseries.py  analysis.py  app connection.py  background_remotion.py  build_jesture_video.py  build_models.py  cam_analysis.py  cut_subclips.py  dataset_creation_move_and_split.py  dataset_creation_move_labeled.py  dataset_creation_perform_labeling.py  dataset_creation_starter_csv.py  dataset_creation_subsample_videos.py  extract_keypoints.py  extract_timeseries_features.py  frequency_analysis.py  mpkpts_evaluate.py  mpkpts_extract_keypoints.py  mpkpts_extract_timeseries_features.py  mpkpts_feature_selection.py  mpkpts_get_prediction_time.py  mpkpts_split_train_test.py  mpkpts_train.py  mpkpts_visualize.ipynb  pretrain_NVGesture.py  process_videos.py  pyproject.toml  realtime_3dcnn.py  realtime_multithread.py  realtime_params.py  requirements.txt  test_Jester_3dcnn.py  test_SFH_3dcnn.py  test_camera.py  test_jester_network.py  (+15 more)
api/: main.py
data/: build_jesture_video.py
dataset/: __init__.py
models/: 3dcnn.py  __init__.py  c3d.py  c3d_v2.py  mobilenet.py  mobilenetv2.py  mobilenetv2_cam.py  model.py  model_mpkpts.py  squeezenet.py
notebooks/: Help_Detection.ipynb  OpenCV_101.ipynb  advanced_cv_tutorial.txt  install_mp_tf_on_apple_silicon.md  mediapipe_playground.ipynb  mediapipe_playground.py
s2citiesAppSdk/: .gitignore  README.md  __init__.py  _s2cities-zone-config--template.json  s2cities-testzone-config.json
src/: analysis.py  const.json  constants.py  extract_features.py  model.py  (+11 more)
(+293 files in other folders)
