[project]
name = "S2CITIES-AI"
version = "0.1.0"
description = "AI software for the S2CITIES project."
authors = [
    {name = "Teo Bucci"},
    {name = "Giuseppe Stracquadanio"},
    {name = "Dario Cavalli"}
]
dependencies = [
    "joblib>=1.3.2",
    "matplotlib>=3.8.3",
    "mediapipe-silicon>=0.9.2.1",
    "mlxtend>=0.23.1",
    "moviepy>=1.0.3",
    "numpy>=1.26.4",
    "opencv-contrib-python>=4.9.0.80",
    "opencv-python>=4.9.0.80",
    "pandas>=2.2.1",
    "Pillow>=10.2.0",
    "pytorchvideo>=0.1.5",
    "requests>=2.31.0",
    "scikit-learn>=1.4.1.post1",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "tqdm>=4.66.2",
    "tsfresh>=0.20.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
